--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"@balldontlie/sdk": "^1.2.2",
 		"framer-motion": "^11.15.0",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router-dom": "^7.12.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.3.18",
